tests/remove_lines/test_missing_slice.fail.rs
use lit_mod::remove_lines;

fn main() {
    let s = remove_lines!("Hello, world!");
}